clusters/talos-cluster/matrix/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matrix-service
  namespace: matrix
spec:
  type: ClusterIP
  selector:
    app: matrix
  ports:
    - name: http
      port: 8008
      targetPort: http
      protocol: TCP
